# typed-html-yew-example

./: Cargo.toml
src/: lib.rs  main.rs
static/: index.html  styles.css
